# cleanflow-ml

./: .gitignore  Makefile  pyproject.toml  pytest.ini  requirements.txt
config/: logging_config.py  mlflow_tracking.py  paths.py
config/params/: dataset_params.yaml  keras_params.yaml
docs/: PtBr-base_data_entity.md  domain-layer.md
notebooks/: dev-quick-start.ipynb  quick-start-dev.ipynb  quick-start.ipynb
references/: clean-architecture-essencial.md
src/: __init__.py  bootstrap.py  main.py
src/application/: __init__.py
src/application/bypasses/: __init__.py  data_adapter_bypass.py  data_cleaner_bypass.py  data_selector_bypass.py  model_bypass.py
src/application/mocks/: mock_jumper_data_adapter.py  mock_jumper_data_cleaner.py  mock_jumper_data_selector.py  mock_jumper_model.py
src/application/orchestrators/: __init__.py  end2end_prediction_flow.py  enrichment_flow.py  pipeline.py
src/application/services/: __init__.py
src/application/usecases/: __init__.py  adapt_data.py  clean_data.py  load_raw_data.py  predict_data.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  base_data_entity.py
src/domain/enums/: __init__.py  problem_type.py
src/domain/interfaces/: __init__.py
src/domain/validation/: I_data_validator.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  paths.py  yaml_config_provider.py
tests/domain/contracts/: test_data_adapter_contract.py  test_data_cleaner_contract.py  test_data_selector_contract.py  test_model_contract.py
tests/domain/entities/: test_base_data_entity.py  (+1 more)
(+45 files in other folders)
