[project]
name = "src"
version = "0.0.1"
description = "A time series forecasting model using Long Short-Term Memory (LSTM) neural networks to predict the closing price of the IBOVESPA index, Brazil’s main stock market index."
authors = [
  { name = "Moreira, André", email = "moreira-and@outlook.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"

dependencies = [
    "tensorflow",
    "cloudpickle",
    "holidays",
    "keras",
    "keras-tuner",
    "loguru",
    "matplotlib",
    "mlflow",
    "numpy",
    "pandas",
    "pandas-datareader",
    "requests",
    "scikit-learn",
    "scipy",
    "tqdm",
    "typer",
    "yfinance",
    "python-dotenv",  # corrigido: package no PyPI é "python-dotenv"
    "joblib",
    "ipython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

[project.urls]
author = "https://github.com/moreira-and"
Repository = "https://github.com/moreira-and/cleanflow-ml"
Issues = "https://github.com/moreira-and/cleanflow-ml/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]